# Awsome-Community-Detection

./: .gitignore  README.md
1-Iterative-Greedy/c++/src/: ig.cpp
1-Iterative-Greedy/python/: IG_with_best_beta.ipynb
2-local-expansion-kmeans/c++/: README.md  main.cc
2-local-expansion-kmeans/python/: different_algorithms_comparaison.ipynb  estimate_k.ipynb  kmeans_parallel.ipynb
2-local-expansion-kmeans/python/utils/: kmeans.py
3-hyperbolic-community-detection/: README.md  test.ipynb
3-hyperbolic-community-detection/utils/clustering_utils/: poincare_em.py  poincare_xmedoid.py
3-hyperbolic-community-detection/utils/data_utils/: corpora.py
3-hyperbolic-community-detection/utils/embedding_utils/: losses.py
3-hyperbolic-community-detection/utils/evaluation_utils/: evaluation.py
Datasets/: image_generation.ipynb
Iterative-Greedy/c++/: main.cc
Iterative-Greedy/python/: IG.ipynb  MSIG.ipynb  README.md
Week1_Feb_15/dataset_generation/: README.md
Week2_Feb_22/Iterative-Greedy/: IG.ipynb  IG_with_best_beta.ipynb  MSIG.ipynb  iterative_greedy.ipynb  your_graph_data.gml
Week2_Feb_22/iterative_greedy/: iterative_greedy.ipynb
Week3_Feb_26/c++/: CMakeLists.txt  a.out  fn.py  main.cc  pp  utils.py
Week3_Feb_26/c++/include/: kmeans.hpp  network.hpp  pca.hpp  utils.h
Week3_Feb_26/c++/src/: kmeans.cpp  network.cpp  pca.cpp  utils.cpp
Week3_Feb_26/kmeans/: README.md  different_algorithms_comparaison.ipynb  drawing.ipynb  kmeans_parallel.ipynb  main_notebook.ipynb  test.ipynb  test.py  test2.py
local-expansion-kmeans/python/: main_notebook.ipynb
(+105 files in other folders)
